fix wrapping of chat messages
because as usual @laino cannot, has to do some not-really-working float tricks instead

--- a/dolosfile.css
+++ b/dolosfile.css
@@ -139,6 +139,12 @@ textarea[disabled] {
 .chat_message > i {
     color: var(--channel-color);
 }
+.chat_message {
+    word-wrap: nowrap;
+}
+.chat_text {
+    word-wrap: normal;
+}
 .chat_file {
     background-color: var(--file-color);
 }
